Third and Fourth Clusters
Third cluster attempt
Fourth Cluster attempt
Added master_backup
Removed Files that broke git
wow am I gald this commit is done

--- a/notebooks/binning.ipynb
+++ b/notebooks/binning.ipynb
@@ -27,112 +27,10 @@
    "execution_count": 3,
    "id": "3449ace8-8882-4483-b48f-fef72494b25f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(195, 2)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NTA_lat</th>\n",
-       "      <th>NTA_long</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40.768352</td>\n",
-       "      <td>-73.809546</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>40.763352</td>\n",
-       "      <td>-73.868396</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>40.734894</td>\n",
-       "      <td>-73.783716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>40.755734</td>\n",
-       "      <td>-73.983503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>40.818055</td>\n",
-       "      <td>-73.856188</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     NTA_lat   NTA_long\n",
-       "0  40.768352 -73.809546\n",
-       "1  40.763352 -73.868396\n",
-       "2  40.734894 -73.783716\n",
-       "3  40.755734 -73.983503\n",
-       "4  40.818055 -73.856188"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get NTA centroid list\n",
-    "NTA = pd.read_csv('../processed_data/NTA_coords.csv')\n",
-    "\n",
-    "print(NTA.shape)\n",
-    "NTA.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "632df29b-55e2-43b0-ba12-d02a7bca315d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NTA_lat     float64\n",
-       "NTA_long    float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "NTA.dtypes"
+    "NTA = pd.read_csv('../processed_data/NTA_coords.csv')"
    ]
   },
   {
@@ -160,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "536a66e3-3570-4a17-b756-fde52b34b317",
    "metadata": {},
    "outputs": [],
@@ -168,15 +66,16 @@
     "#--- EXPERIMENT --- \n",
     "\n",
     "#create list of frames to pull in (facilities treated seperately)\n",
-    "wanted_df = ['density/geocoded_population', 'density/geocoded_traffic', \n",
-    "             'buildings/building_count','buildings/building_stories', ]\n",
+    "wanted_df = ['density/geocoded_population', 'density/geocoded_traffic', 'buildings/building_count', \n",
+    "             'buildings/building_stories', 'restaurants/yelp', 'restaurants/rest_insp', 'density/p_meter', \n",
+    "             'wellbeing/parks', 'wellbeing/hotels', 'wellbeing/libraries']\n",
     "#list of whether each frame should have 'sum' or 'count'\n",
-    "metrics = [False, 'sum', False, False]"
+    "metrics = [False, 'sum', False, False, 'sum', 'mean', 'count', 'sum', 'count', 'count']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ea004b98-2f34-4104-901e-5cab9abd9038",
    "metadata": {},
    "outputs": [],
@@ -204,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "5414ab63-5db9-4ade-9973-4b8cd67265cd",
    "metadata": {},
    "outputs": [],
@@ -214,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e8636bab-ceb5-48aa-a0fe-9a3317492591",
    "metadata": {},
    "outputs": [
@@ -295,7 +194,7 @@
        "194  40.812089 -73.885547    290.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b24b36c3-e605-4456-9478-060907e167f5",
    "metadata": {},
    "outputs": [],
@@ -334,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "44be2a58-f427-4570-8d8c-191faa7d960f",
    "metadata": {},
    "outputs": [
@@ -342,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/r6/fys6jqz12zg0mt2n15r5gw3m0000gq/T/ipykernel_6605/3096404365.py:21: FutureWarning: Passing 'suffixes' which cause duplicate columns {'count_x'} in the result is deprecated and will raise a MergeError in a future version.\n",
+      "/tmp/ipykernel_38578/3096404365.py:21: FutureWarning: Passing 'suffixes' which cause duplicate columns {'count_x'} in the result is deprecated and will raise a MergeError in a future version.\n",
       "  facilities_all = pd.merge(facilities_all, facility_bin[factypes[i]],  how='left',\n"
      ]
     }
@@ -379,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ce33d085-34e8-4e2b-a1b2-1fcd337b7255",
    "metadata": {},
    "outputs": [],
@@ -398,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f450002f-050c-41c1-986f-c22f73e928be",
    "metadata": {},
    "outputs": [
@@ -504,7 +403,7 @@
        "4                    9.0                 15.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "514b5f6b-0081-4125-814e-9fe8ee21e6d7",
    "metadata": {},
    "outputs": [],
@@ -550,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "fa4ac085-d0fa-451c-91a0-b9675c609810",
    "metadata": {},
    "outputs": [
@@ -581,6 +480,13 @@
        "      <th>traffic</th>\n",
        "      <th>buildings</th>\n",
        "      <th>legalstories</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>price</th>\n",
+       "      <th>rest_insp_score</th>\n",
+       "      <th>density/p_meter</th>\n",
+       "      <th>acres</th>\n",
+       "      <th>wellbeing/hotels</th>\n",
+       "      <th>wellbeing/libraries</th>\n",
        "      <th>DAY CARE</th>\n",
        "      <th>NON-PUBLIC K-12 SCHOOLS</th>\n",
        "      <th>HOSPITALS AND CLINICS</th>\n",
@@ -596,6 +502,13 @@
        "      <td>244.032407</td>\n",
        "      <td>70.0</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>3.23</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>19.684211</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>14.806</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
@@ -609,6 +522,13 @@
        "      <td>290.000000</td>\n",
        "      <td>62.0</td>\n",
        "      <td>2.193548</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>16.100000</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>489.933</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -622,6 +542,13 @@
        "      <td>618.412037</td>\n",
        "      <td>23.0</td>\n",
        "      <td>2.086957</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>23.574257</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>53.624</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
@@ -635,6 +562,13 @@
        "      <td>3993.351852</td>\n",
        "      <td>8.0</td>\n",
        "      <td>26.875000</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>19.110478</td>\n",
+       "      <td>542.0</td>\n",
+       "      <td>9.889</td>\n",
+       "      <td>449.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>9.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
@@ -648,6 +582,13 @@
        "      <td>290.000000</td>\n",
        "      <td>355.0</td>\n",
        "      <td>2.754237</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>20.736842</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>309.824</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
@@ -665,22 +606,29 @@
        "3  40.755734 -73.983503     28630.0  3993.351852        8.0     26.875000   \n",
        "4  40.818055 -73.856188     53686.0   290.000000      355.0      2.754237   \n",
        "\n",
-       "   DAY CARE  NON-PUBLIC K-12 SCHOOLS  HOSPITALS AND CLINICS  \\\n",
-       "0      13.0                      4.0                    1.0   \n",
-       "1       3.0                      0.0                    0.0   \n",
-       "2       4.0                      5.0                    5.0   \n",
-       "3       9.0                      0.0                    3.0   \n",
-       "4       4.0                      2.0                    5.0   \n",
+       "   rating  price  rest_insp_score  density/p_meter    acres  wellbeing/hotels  \\\n",
+       "0    3.23   1.96        19.684211             62.0   14.806               7.0   \n",
+       "1    2.67   1.90        16.100000             24.0  489.933               5.0   \n",
+       "2    2.70   1.92        23.574257             58.0   53.624               3.0   \n",
+       "3    2.57   2.00        19.110478            542.0    9.889             449.0   \n",
+       "4    2.94   1.90        20.736842              0.0  309.824               0.0   \n",
        "\n",
-       "   PUBLIC K-12 SCHOOLS  \n",
-       "0                  4.0  \n",
-       "1                  3.0  \n",
-       "2                  4.0  \n",
-       "3                  2.0  \n",
-       "4                 15.0  "
+       "   wellbeing/libraries  DAY CARE  NON-PUBLIC K-12 SCHOOLS  \\\n",
+       "0                  2.0      13.0                      4.0   \n",
+       "1                  2.0       3.0                      0.0   \n",
+       "2                  2.0       4.0                      5.0   \n",
+       "3                  4.0       9.0                      0.0   \n",
+       "4                  1.0       4.0                      2.0   \n",
+       "\n",
+       "   HOSPITALS AND CLINICS  PUBLIC K-12 SCHOOLS  \n",
+       "0                    1.0                  4.0  \n",
+       "1                    0.0                  3.0  \n",
+       "2                    5.0                  4.0  \n",
+       "3                    3.0                  2.0  \n",
+       "4                    5.0                 15.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ba50c291-9598-4aa6-9090-b20b913f35b6",
    "metadata": {},
    "outputs": [],
