--- a/notebooks/density.ipynb
+++ b/notebooks/density.ipynb
@@ -355,6 +355,7 @@
    "cell_type": "markdown",
    "id": "ddb6326c-e9cc-4abf-b185-ab4fa766d128",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -364,7 +365,9 @@
   {
    "cell_type": "markdown",
    "id": "8888d405-9c3c-4df3-9d51-e7329b019830",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Pedestrian Import"
    ]
@@ -612,9 +615,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1edfecf3-a80d-41ce-95dc-edfdc0a0d572",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Parking Meters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "12dbe112-2605-468b-b1b6-eb5e642dacb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/home/brian/Downloads/parking_meters.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "71b94cba-4519-4252-a4ef-cb380b280807",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['the_geom', 'MeterNo', 'MeterType', 'Borough', 'X', 'Y'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5ee0a160-99cb-4c9d-9063-751d67dc785d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "522aa307-6ed0-4c91-a680-35abc44c3e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df[\"Status\"].str.contains('Active')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b9a3cb59-dfab-4e09-93d0-275469370d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['Status'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "cd051b46-f373-48a5-b545-2ee95db97afd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={\"LONG\": \"longitude\", \"LAT\": \"latitude\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "841ef9e1-5eec-4291-a20b-ef5fad81fa51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 14267 entries, 0 to 15267\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   LONG    14267 non-null  float64\n",
+      " 1   LAT     14267 non-null  float64\n",
+      "dtypes: float64(2)\n",
+      "memory usage: 334.4 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "694769c9-a017-4fe6-a32b-d6d3facfa1ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../processed_data/density/p_meter.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16041900-e49a-4107-b3c2-53e223d9ed28",
+   "id": "ef36b4b8-042b-4e1f-b3fc-e207c9ea2a28",
    "metadata": {},
    "outputs": [],
    "source": []
