--- a/notebooks/restaurants.ipynb
+++ b/notebooks/restaurants.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "673534a4-155c-49aa-a75e-9150c97ae45e",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,16 @@
     "import json\n",
     "import pandas as pd\n",
     "from statistics import mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc14cceb-0f64-4a36-a6e6-0112337fb9bf",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Yelp"
    ]
   },
   {
@@ -188,19 +198,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 54,
+   "id": "11962cb8-dfb9-444f-984c-7b4f58fb18ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfnta = pd.read_csv(\"../processed_data/NTA_coords.csv\")\n",
+    "dfyelp = pd.read_csv('../processed_data/restaurants/yelp.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6456f978-b7fc-47e2-b2dc-f9ef391e942a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([dfnta, dfyelp], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "70e56a2b-5e24-4534-a2d6-8cd4a593c0b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={\"NTA_lat\": \"latitude\", \"NTA_long\": \"longitude\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "3c112ad3-6ffb-45ed-9c77-0893e404a255",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save dataframe to CSV\n",
-    "df.to_csv('../processed_data/yelp.csv', index=False, encoding='utf-8')"
+    "df.to_csv('../processed_data/restaurants/yelp.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a535755-a8e7-47e5-b5c2-a29f87a66310",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Restaurant Inspections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c0fa191c-b6af-45a6-85b6-240b07022dd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_r = pd.read_csv(\"/home/brian/Documents/temp midterm/restaurant_inspections.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "dbeaa6be-8cc0-47b3-9ec0-0966ad12c0fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_r = df_r[[\"Latitude\", \"Longitude\", \"SCORE\", \"INSPECTION DATE\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c83f75cc-caaf-43fe-a44a-cd1b1403785a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_r.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "fb7ef329-8232-450e-9360-4e43489f7c72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_r = df_r[df_r[\"INSPECTION DATE\"].str.contains('2021')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "bcea05bd-5496-49c7-84bc-34c70b31c2b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_r = df_r[df_r.Latitude != 0]\n",
+    "df_r = df_r[df_r.Longitude != 0]\n",
+    "df_r = df_r[df_r.SCORE != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "a07d90b6-7449-4a6a-bbc8-a841ba92f497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_r.rename(columns={\"Latitude\": \"latitude\", \"Longitude\": \"longitude\", \"SCORE\": \"rest_insp_score\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "46cfdc35-e842-4d03-83f7-67c4ee9e6383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_r.to_csv('../processed_data/restaurants/rest_insp.csv', index=False, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b165d3f-1256-4de2-bf9c-2b9bf324a75c",
+   "id": "0fb92a97-6437-4d0f-b7c8-0a72b4cb49df",
    "metadata": {},
    "outputs": [],
    "source": []
