Cleaning up figures and notebooks. Added SODA API calls for parking meter and restaraunt inspection datasets

--- a/notebooks/density.ipynb
+++ b/notebooks/density.ipynb
@@ -24,7 +24,6 @@
    "cell_type": "markdown",
    "id": "de380ec2-866b-4434-ad57-8abc7f3c0806",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "id": "48e669f7-4884-4756-9f7c-9e9361da6b1f",
    "metadata": {},
    "outputs": [],
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "id": "9d74ed29-bd45-4741-85ba-8d5a0f2bd621",
    "metadata": {},
    "outputs": [],
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "id": "8b7ecc07-735e-44d1-8b1a-26838a5b0d2c",
    "metadata": {},
    "outputs": [],
@@ -167,7 +166,6 @@
    "cell_type": "markdown",
    "id": "60e485f0-2087-4483-831a-4feaf588a6ce",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -186,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "9b6d7a84-46a6-4003-9260-3bf4eb3249d4",
    "metadata": {},
    "outputs": [],
@@ -355,7 +353,6 @@
    "cell_type": "markdown",
    "id": "ddb6326c-e9cc-4abf-b185-ab4fa766d128",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -374,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "2526436b-57ac-44ea-821e-c0566d063d7b",
    "metadata": {},
    "outputs": [],
@@ -395,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "288fac97-392a-4414-82fa-d1d2ee57c445",
    "metadata": {},
    "outputs": [],
@@ -410,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "56184131-21f8-4231-a87f-6b4008c2b73b",
    "metadata": {},
    "outputs": [],
@@ -430,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "46e7b432-d9c4-44c3-b497-c3847ec00b57",
    "metadata": {},
    "outputs": [],
@@ -459,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "eba4f1b3-f1d0-4ea3-b750-a9e3ab6f9d75",
    "metadata": {},
    "outputs": [
@@ -578,7 +575,7 @@
        "[112 rows x 3 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +589,7 @@
     "# Remove broken lat-long data\n",
     "df = df[df.latitude != 0]\n",
     "# Replace 0 values with median\n",
-    "df.replace(to_replace={'ped_traffic': {0: df['ped_traffic'].median()}}, value=None)"
+    "#df.replace(to_replace={'ped_traffic': {0: df['ped_traffic'].median()}}, value=None)"
    ]
   },
   {
@@ -605,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "35ae8ff0-ac1a-49e3-8183-6d3684d405d7",
    "metadata": {},
    "outputs": [],
@@ -626,98 +623,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "12dbe112-2605-468b-b1b6-eb5e642dacb2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/home/brian/Downloads/parking_meters.csv\")"
+    "#df = pd.read_csv(\"/home/brian/Downloads/parking_meters.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "71b94cba-4519-4252-a4ef-cb380b280807",
+   "execution_count": 39,
+   "id": "5baadad1-f7df-4bc3-8da5-5965e3f2b917",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(['the_geom', 'MeterNo', 'MeterType', 'Borough', 'X', 'Y'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "5ee0a160-99cb-4c9d-9063-751d67dc785d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.dropna(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "522aa307-6ed0-4c91-a680-35abc44c3e6d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[df[\"Status\"].str.contains('Active')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "b9a3cb59-dfab-4e09-93d0-275469370d0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop(['Status'], axis=1, inplace=True)"
+    "#import custom function python\n",
+    "%run -i ../notebooks/functions/functions.py\n",
+    "#get NTA centroid list\n",
+    "NTA = pd.read_csv('../processed_data/NTA_coords.csv')\n",
+    "import requests as re\n",
+    "from IPython.display import JSON"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "3dc90d82-348a-4946-a853-1399556d9366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmeter_JSON = API('https://data.cityofnewyork.us/resource/kbkc-iav5.json', \n",
+    "   '?status=Active&$limit=20000', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1b5c2567-95b7-40dc-b4d3-5db71062e5aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desired_feat = ['lat', 'long']\n",
+    "\n",
+    "pmeter_df = JSON_to_DF(pmeter_JSON, desired_feat)\n",
+    "pmeter_df = pmeter_df.apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "pmeter_df.columns = ['latitude', 'longitude']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "68e2ecbd-e6c0-4022-afe2-28447c635e25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmeter_binned = bin_data(pmeter_df, 'count', 'pmeters')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1ead2a0c-d60f-497d-8159-53ee53d81dc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmeter_binned.to_csv('../processed_data/density/p_meter.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71b94cba-4519-4252-a4ef-cb380b280807",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.drop(['the_geom', 'MeterNo', 'MeterType', 'Borough', 'X', 'Y'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ee0a160-99cb-4c9d-9063-751d67dc785d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "522aa307-6ed0-4c91-a680-35abc44c3e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = df[df[\"Status\"].str.contains('Active')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9a3cb59-dfab-4e09-93d0-275469370d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.drop(['Status'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cd051b46-f373-48a5-b545-2ee95db97afd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.rename(columns={\"LONG\": \"longitude\", \"LAT\": \"latitude\"})"
+    "#df = df.rename(columns={\"LONG\": \"longitude\", \"LAT\": \"latitude\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "841ef9e1-5eec-4291-a20b-ef5fad81fa51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 14267 entries, 0 to 15267\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   LONG    14267 non-null  float64\n",
-      " 1   LAT     14267 non-null  float64\n",
-      "dtypes: float64(2)\n",
-      "memory usage: 334.4 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.info()"
+    "#df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "694769c9-a017-4fe6-a32b-d6d3facfa1ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../processed_data/density/p_meter.csv', index=False, encoding='utf-8')"
+    "#df.to_csv('../processed_data/density/p_meter.csv', index=False, encoding='utf-8')"
    ]
   },
   {
