--- a/notebooks/restaurants.ipynb
+++ b/notebooks/restaurants.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "673534a4-155c-49aa-a75e-9150c97ae45e",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "cf39000a-1867-455d-bbbc-5a49f0613039",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "02b6382a-eae5-4099-b1df-09c0679713cc",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "f5317d73-4062-4237-8eaf-ba0d10a0b22a",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "643c56cf-4096-4d17-821b-62ac6f2fcab3",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "7febae41-ec37-457e-9ea0-a5273628a9ed",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "id": "0e278f9e-dd5b-441d-9fa2-57f0c3f706d2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "id": "90da81c2-d953-4001-b342-8da1dee0f1ef",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "11962cb8-dfb9-444f-984c-7b4f58fb18ee",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "6456f978-b7fc-47e2-b2dc-f9ef391e942a",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "70e56a2b-5e24-4534-a2d6-8cd4a593c0b7",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "3c112ad3-6ffb-45ed-9c77-0893e404a255",
    "metadata": {},
    "outputs": [],
@@ -250,74 +250,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
+   "id": "b9849145-f9fe-4304-b1c0-102383ad8631",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import custom function python\n",
+    "%run -i ../notebooks/functions/functions.py\n",
+    "import requests as re\n",
+    "from IPython.display import JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9e3bc22b-6bd9-4972-a25b-b288c980c1f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insp_JSON = API('https://data.cityofnewyork.us/resource/43nn-pn8j.json', \n",
+    "   '?$where=date_extract_y(inspection_date)=2021 AND latitude!=0 AND score!=0&$limit=30000', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9bc34591-d7c5-466e-a0c0-3119d233919c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desired_feat = ['latitude', 'longitude', 'score']\n",
+    "\n",
+    "insp_df = JSON_to_DF(insp_JSON, desired_feat)\n",
+    "insp_df = insp_df.apply(pd.to_numeric, errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4b4bcbae-a41f-42be-98d1-ad848c33b4d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get NTA centroid list\n",
+    "NTA = pd.read_csv('../processed_data/NTA_coords.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5f044e52-da6d-448c-baba-da8f5b4d5c04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspection_score = bin_data(insp_df, 'mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fe7ad5d4-3139-4b8d-85b5-bbffbb2df2b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspection_score.to_csv('../processed_data/restaurants/rest_insp.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "c0fa191c-b6af-45a6-85b6-240b07022dd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_r = pd.read_csv(\"/home/brian/Documents/temp midterm/restaurant_inspections.csv\")"
+    "#df_r = pd.read_csv(\"/home/brian/Documents/temp midterm/restaurant_inspections.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "id": "dbeaa6be-8cc0-47b3-9ec0-0966ad12c0fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_r = df_r[[\"Latitude\", \"Longitude\", \"SCORE\", \"INSPECTION DATE\"]]"
+    "#df_r = df_r[[\"Latitude\", \"Longitude\", \"SCORE\", \"INSPECTION DATE\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "id": "c83f75cc-caaf-43fe-a44a-cd1b1403785a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_r.dropna(inplace=True)"
+    "#df_r.dropna(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "id": "fb7ef329-8232-450e-9360-4e43489f7c72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_r = df_r[df_r[\"INSPECTION DATE\"].str.contains('2021')]"
+    "#df_r = df_r[df_r[\"INSPECTION DATE\"].str.contains('2021')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "id": "bcea05bd-5496-49c7-84bc-34c70b31c2b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_r = df_r[df_r.Latitude != 0]\n",
-    "df_r = df_r[df_r.Longitude != 0]\n",
-    "df_r = df_r[df_r.SCORE != 0]"
+    "#df_r = df_r[df_r.Latitude != 0]\n",
+    "#df_r = df_r[df_r.Longitude != 0]\n",
+    "#df_r = df_r[df_r.SCORE != 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "id": "a07d90b6-7449-4a6a-bbc8-a841ba92f497",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_r.rename(columns={\"Latitude\": \"latitude\", \"Longitude\": \"longitude\", \"SCORE\": \"rest_insp_score\"}, inplace=True)"
+    "#df_r.rename(columns={\"Latitude\": \"latitude\", \"Longitude\": \"longitude\", \"SCORE\": \"rest_insp_score\"}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "id": "46cfdc35-e842-4d03-83f7-67c4ee9e6383",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_r.to_csv('../processed_data/restaurants/rest_insp.csv', index=False, encoding='utf-8')"
+    "#df_r.to_csv('../processed_data/restaurants/rest_insp.csv', index=False, encoding='utf-8')"
    ]
   },
   {
